# origin

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  LICENSE  README.md  config.yaml  origin.code-workspace
include/: builtins.hpp
src/: Origin.cpp  Origin.hpp
src/debug/: Message.cpp  Message.hpp
src/graphics/: Color.hpp  Vertex.hpp
src/math/: Basic.hpp  Biquad.cpp  Biquad.hpp  Builtin.hpp  Geometry.cpp  Geometry.hpp  Timer.cpp  Timer.hpp  Vector.cpp  Vector.hpp
src/process/: Console.cpp  Console.hpp  Exec.cpp  Exec.hpp
src/text/: String.hpp
test/: Main.cpp  MemConvert.cpp
